--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,10 +1,17 @@
 <h1>Все карточки</h1>
-<ul>
+
+<div class="row">
+
 <% @cards.each do |card| %>
-
-  <li><%= card.original_text %>
-  <%= card.translated_text %>
-  <%= card.review_date.mday%>.<%= card.review_date.mon %>.<%= card.review_date.year %>
-
+  <div class="row">
+    <div class="col-md-4">
+      <pre>   
+        <%= card.original_text %>
+        <%= card.translated_text %>
+        <%= card.review_date.strftime("%d.%m.%Y") %>
+      </pre>
+    </div>
+  </div>
 <% end %>
-</ul>
+
+
