--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,31 +9,33 @@
   </head>
 
   <body>
-  <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-      <a class="navbar-brand" href="#">Brand</a>
+    
+      <header class="clearfix">
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Флэшкарточкер</a>
+              </div>
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right"">
+                  <li><a href=cards>Все карточки</a></li>
+                  <li><a href="#">Добавить карточку</a></li>
+                </ul>
+              </div>
+          </div>
+        </nav>
+      </header>
+      
+    <div class="container">
+      <%= yield %>
     </div>
 
-    <section id="container">
-
-      <header class="clearfix">
-        <h1>Флэшкарточкер</h1>
-          <ul class="navigation-links">
-            <li><a href="cards#index">Все карточки</a></li>
-            <li><a href="#">Добавить карточку</a></li>
-          </ul>
-      </header>
-
-    <%= yield %>
-
-    </section>
   </body>
 </html>
