--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
               </div>
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right"">
-                  <li><a href=cards>Все карточки</a></li>
-                  <li><a href="#">Добавить карточку</a></li>
+                  <li><a href=<%=cards_path%>>Все карточки</a></li>
+                  <li><a href=<%=new_card_path%>>Добавить карточку</a></li>
                 </ul>
               </div>
           </div>
