--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,9 @@
           </div>
         </nav>
       </header>
-      
+    
+    <%= render 'layouts/messages' %>
+  
     <div class="container">
       <%= yield %>
     </div>
