upload image on S3 with paperclip and clear  some files (#11)
* upload image on S3 with paperclip and clear  some files

* fix test

--- a/app/views/cards/_form.html.haml
+++ b/app/views/cards/_form.html.haml
@@ -2,4 +2,5 @@
   = f.error_notification
   = f.input :original_text
   = f.input :translated_text
+  = f.input :picture, as: :file
   = f.button :submit
