create cards in deck. train card in deck. without new test

--- a/app/views/cards/_form.html.haml
+++ b/app/views/cards/_form.html.haml
@@ -1,6 +1,7 @@
 = simple_form_for @card do |f|
   = f.error_notification
-  = f.input :original_text
-  = f.input :translated_text
-  = f.input :picture, as: :file
+  = f.input  :original_text
+  = f.input  :translated_text
+  = f.input  :picture, as: :file
+  = f.association  :deck, collection: current_user.decks
   = f.button :submit
