--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,6 +17,8 @@
             = link_to 'Все карточки', cards_path
           %li
             = link_to 'Добавить карточку', new_card_path
+          %li
+            = link_to 'Все колоды', decks_path
         %ul.nav.nav-pills.navbar-right
           - if current_user
             %li.active
