--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
   %body
     = render 'layouts/header'
     .container
+      = render 'layouts/decks_bar'
       = render 'layouts/messages'
     .container
       = yield
