--- a/app/views/decks/index.html.haml
+++ b/app/views/decks/index.html.haml
@@ -14,9 +14,9 @@
 
       = link_to 'Тренировать слова в этой колоде', set_current_deck_path(deck), method: :put
       |
-      = link_to 'Изменить название колоды', edit_deck_path(deck)
+      = link_to 'Изменить название', edit_deck_path(deck)
       |
-      = link_to 'Удалить колоду', deck, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      = link_to 'Удалить', deck, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
 - unless current_user.current_deck_id
   %b
