fix card model, controller for empty desk

--- a/app/views/cards/edit.html.haml
+++ b/app/views/cards/edit.html.haml
@@ -1,3 +1,10 @@
 %h1 Редактируйте карточку
 %pre
-  = render 'form', card: @card
+  = simple_form_for @card do |f|
+  = f.error_notification
+  = f.input  :original_text
+  = f.input  :translated_text
+  = f.input  :review_date, as: :string
+  = f.input  :picture, as: :file
+  = f.association  :deck, collection: current_user.decks
+  = f.button :submit
