--- a/app/views/cards/edit.html.haml
+++ b/app/views/cards/edit.html.haml
@@ -5,7 +5,7 @@
     = f.input  :original_text
     = f.input  :translated_text
     = f.input  :review_date, as: :string
-    = f.input  :picture, as: :file
+    = f.file_field  :picture
     = f.association  :deck, collection: current_user.decks
     = f.hidden_field :user_id, value: current_user.id
     = f.button :submit
