--- a/app/views/decks/index.html.haml
+++ b/app/views/decks/index.html.haml
@@ -1,24 +1,28 @@
 %h1 Колоды карт
 - @decks.each do |deck|
-  .row
-    .col-md-10
-      %br
+  %br
+    .btn-group
       - if current_user.current_deck_id
         - if current_user.current_deck_id == deck.id
-          %b
-            = deck.title
+          %button.btn.btn-primary{:type => "button"}
+            %b
+              = deck.title + ':'
+              Текущая колода
+          %button.btn.btn-default{:type => "button"}
+            = link_to 'Не использовать колоду', set_current_deck_path(deck), method: :put
         - else
-          = deck.title
+          %button.btn.btn-default{:type => "button"}
+            = deck.title
+          %button.btn.btn-default{:type => "button"}
+            = link_to 'Сделать колоду текущей', set_current_deck_path(deck), method: :put
       - else
-        = deck.title
-
-      = link_to 'Тренировать слова в этой колоде', set_current_deck_path(deck), method: :put
-      |
-      = link_to 'Не использовать', set_current_deck_path(deck), method: :put
-      |
-      = link_to 'Изменить название', edit_deck_path(deck)
-      |
-      = link_to 'Удалить', deck, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %button.btn.btn-default{:type => "button"}
+          = deck.title
+        %button.btn.btn-default{:type => "button"}
+          = link_to 'Сделать колоду текущей', set_current_deck_path(deck), method: :put
+    = link_to '  Изменить название', edit_deck_path(deck)
+    |
+    = link_to 'Удалить', deck, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
 %br
