--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,14 +11,15 @@
         %a.navbar-brand{:href => "/"} Флэшкарточкер
       #bs-example-navbar-collapse-1.collapse.navbar-collapse
         %ul.nav.navbar-nav
-          %li
-            = link_to 'Тренироваться', train_path
-          %li
-            = link_to 'Все карточки', cards_path
-          %li
-            = link_to 'Добавить карточку', new_card_path
-          %li
-            = link_to 'Все колоды', decks_path
+          - if current_user
+            %li
+              = link_to 'Тренироваться', train_path
+            %li
+              = link_to 'Все карточки', cards_path
+            %li
+              = link_to 'Добавить карточку', new_card_path
+            %li
+              = link_to 'Все колоды', decks_path
         %ul.nav.nav-pills.navbar-right
           - if current_user
             %li.active
