fix many update in card model methods and add tests

--- a/app/views/cards/train.html.haml
+++ b/app/views/cards/train.html.haml
@@ -3,6 +3,12 @@
   .col-md-4
     %h3
       %br
+        коррект
+        = @card.number_of_correct
+      %br
+        НЕкоррект
+        = @card.number_of_incorrect
+      %br
       = image_tag @card.picture.url(:thumb)
       %br
       = @card.translated_text
